 HT ChangeLog
==============

version 2.1.0:
	- updated included minilzo
	- new disassembler: Atmel AVR 8-bit microcontroller

version 2.0.18:
	- [x86] SSE5/XOP/AVX merge
	- symbols "first" and "last" in hex view

version 2.0.17:
	- compilation fixes for gcc 4.4
	- fixed crash on garbage in elf section headers

version 2.0.16:
	- [x86] intel avx update
	- updated c++ demangler
	- small crash fix

version 2.0.15:
	- [Win32] removed a debug printf
	- fixed clipboard view
	- fixed ELF symbol viewer

version 2.0.14:
	- [x86] movbe, invept, invvpid
	- [eval] better help
	- [eval] last result (symbol _)
	- [eval] u8, u16 etc. for current byte, word..
	- fixed embarrassing endianess bug

version 2.0.13:
	- [win32] optimize redrawing (reduce flicker)
	- [x86] intel avx, aes and pclmulqdq extension

version 2.0.12:
	- fixed crash with too long lines
	- fixed some cosmetic resizing things in dialogs
	  (File-Open, Show-Xrefs)
	- c++-demangler from gcc 4.3

version 2.0.11:
	- [Win32] Save config in home directory
	- fixed crash while changing text highlighting
	- small bug fixes
	
version 2.0.10:
	- [x86] SSE5 :)
	
version 2.0.9:
	- [Mach-O] ARM and X86_64 support
	- [Mach-O] support for 64 bit images
	- small bugs fixes

version 2.0.8:
	- Loading Analyser for java class files was broken
	- Fixed some cosmetic resizing bugs
	- Fixed infinite loop in fgetstrz

version 2.0.7:
	- Added a missing #include found by gcc 4.3
	- Fixed minor problems found by gcc 4.3

version 2.0.6:
	- [POSIX] Ignore mouse events
	- Dump analyser output function was broken
	- Fixed a lot of (possible) buffer overflows

version 2.0.5:
	- Editing bytes in image mode was broken under
	  subtile circumstances

version 2.0.4:
	- Fixed some 64 bit issues

version 2.0.3:
	- [POSIX] Resize application on SIGWINCH
	- [x86] SSE4.1/SSE4.2
	- [x86] small bug fixes
	- [x86] reduced opcode table bloat
	- Allow different displacements in hex view

version 2.0.2: