@@ -31,7 +31,7 @@ extern ht_view *app;
 extern ht_view *baseview;
 extern SystemDisplay *screen;
 extern List *virtual_fs_list;
-extern void *project;
+extern Object *project;
 extern char appname[HT_NAME_MAX+1];
 extern int some_analyser_active;
 extern int num_ops_parsed;
